@@ -44,8 +44,10 @@ schema = Schema((
     ReferenceField(
         name='showMoreLink',
         widget=ReferenceBrowserWidget(
-            label='Showmorelink',
+            label=""""Show more" link""",
+            description="Optionally, add a location for an extra link that will be displayed below the items, like a link to the collection itself.",
             label_msgid='Doormat_label_showMoreLink',
+            description_msgid='Doormat_help_showMoreLink',
             i18n_domain='Doormat',
         ),
         relationship="more_link_links_to_internal",
@@ -53,24 +55,30 @@ schema = Schema((
     StringField(
         name='showMoreText',
         widget=StringField._properties['widget'](
-            label='Showmoretext',
+            label=""""Show more" text""",
+            description="""The text for the "Show more" link.""",
             label_msgid='Doormat_label_showMoreText',
+            description_msgid='Doormat_help_showMoreText',
             i18n_domain='Doormat',
         ),
     ),
     IntegerField(
         name='limit',
         widget=IntegerField._properties['widget'](
-            label='Limit',
+            label="Limit number of items",
+            description="Maximum number of items to be shown, leave blank for all items.",
             label_msgid='Doormat_label_limit',
+            description_msgid='Doormat_help_limit',
             i18n_domain='Doormat',
         ),
     ),
     BooleanField(
         name='showTime',
         widget=BooleanField._properties['widget'](
-            label='Showtime',
+            label="Show time",
+            description="Show the item's last modification time",
             label_msgid='Doormat_label_showTime',
+            description_msgid='Doormat_help_showTime',
             i18n_domain='Doormat',
         ),
     ),
