@@ -8,7 +8,7 @@
     id="Doormat-Update-RoleMappings" 
     handler="Products.Doormat.setuphandlers.updateRoleMappings"
     title="Update Workflow role mappings for Doormat"
-    version="2011-06-20T16:42:56.139832">
+    version="2011-06-20T17:03:44.313275">
    <dependency step="Doormat-QI-dependencies"/>
    updates the workflow role mappings for Doormat
  </import-step>
@@ -17,7 +17,7 @@
     id="Doormat-postInstall" 
     handler="Products.Doormat.setuphandlers.postInstall"
     title="manual coded post-install for Doormat"
-    version="2011-06-20T16:42:56.139832">
+    version="2011-06-20T17:03:44.313275">
    <dependency step="Doormat-QI-dependencies"/>
    manual coded post-install for Doormat
  </import-step>
