@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>0.6.17</version>
+  <version>0.6.20</version>
   <!-- ##code-section METADATA -->
   <!-- ##/code-section METADATA -->
 </metadata>
