@@ -4,9 +4,9 @@
         xmlns:i18n="http://xml.zope.org/namespaces/i18n"
         i18n:domain="plone">
    
- <property name="title" i18n:translate="">Collection</property>
- <property name="description" i18n:translate=""></property>
- <property name="content_icon">DoormatCollection.gif</property>
+ <property name="title" i18n:translate="">Link to Collection</property>
+ <property name="description" i18n:translate="">Take contents from a Collection</property>
+ <property name="content_icon">topic_icon.gif</property>
  <property name="content_meta_type">DoormatCollection</property>
  <property name="product">Doormat</property>
  <property name="factory">addDoormatCollection</property>
